// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoginPageComponent should not render the error message if there is no error provided 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should not render the template when there is no VM provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render template correctly with the defer block on immediate 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary btn-disabled"
                  disabled=""
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the error message if an error is provided 1`] = `
<div
  id="root12"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <p
              class="text-red-500 text-sm"
            >
               error 
            </p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the required assistive text inside the email input if it is dirty and has error 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-dirty ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-dirty ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input is-invalid"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <span
                        leftassistivetext=""
                      >
                        required
                      </span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the required assistive text inside the password input if it is dirty and has error 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-dirty ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-dirty ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input is-invalid"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <span
                        leftassistivetext=""
                      >
                        required
                      </span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the button doesn't have text in defer block on immediate 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary btn-disabled"
                  disabled=""
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the button has text in defer block on immediate 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary btn-disabled"
                  disabled=""
                >
                   butt 
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the form is invalid with the defer block on immediate 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary btn-disabled"
                  disabled=""
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the form is valid with the defer block on immediate 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-valid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary"
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the form is valid with the defer block on immediate 2`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-valid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary"
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template correctly if the form is valid with the defer block on immediate 3`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-valid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-valid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <app-button>
                <button
                  class="btn flex flex-row justify-center btn-primary"
                >
                  <!--container-->
                </button>
              </app-button>
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;

exports[`LoginPageComponent should render the template when there is a VM provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <section
    class="flex flex-col items-center justify-center min-h-screen px-4 md:px-0"
  >
    <app-login-form>
      <div
        class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] w-full max-w-4xl md:mx-0 bg-white rounded-2xl shadow-md overflow-hidden"
      >
        <div
          class="md:w-1/2 w-full"
        >
          <img
            alt="desc"
            class="h-48 md:h-full w-full object-cover"
            src="assets/farming.jpg"
          />
        </div>
        <div
          class="flex flex-col justify-center p-5 w-full md:w-1/2 space-y-4"
        >
          <h3
            class="text-2xl tracking-wider"
          >
             tit 
          </h3>
          <p>
            desc
          </p>
          <p>
            <!--container-->
          </p>
          <div
            class="w-full"
          >
            <form
              class="ng-untouched ng-pristine ng-invalid"
              novalidate=""
            >
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="email"
                    >
                      elab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="email"
                      class="grow"
                      id="email"
                      placeholder="eplace"
                      type="email"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <app-input-text
                class="ng-untouched ng-pristine ng-invalid"
              >
                <div
                  class="my-2"
                >
                  <span
                    class="flex flex-row justify-between items-end label-text"
                  >
                    <label
                      for="password"
                    >
                      plab
                    </label>
                  </span>
                  <div
                    class="space-x-3 flex items-center input"
                  >
                    <input
                      autocomplete="current-password"
                      class="grow"
                      id="password"
                      placeholder="pplace"
                      type="password"
                    />
                  </div>
                  <div
                    class="grid grid-cols-2 items-baseline helper-text"
                  >
                    <span>
                      <!--container-->
                    </span>
                    <span
                      class="text-right"
                    />
                  </div>
                </div>
                <!--container-->
              </app-input-text>
              <!--container-->
              <!--container-->
            </form>
          </div>
        </div>
      </div>
      <!--container-->
    </app-login-form>
  </section>
  <!--container-->
  <!--container-->
</div>
`;
